<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.matsim</groupId>
	<artifactId>playgrounds</artifactId>
	<packaging>pom</packaging>
	<version>0.8.0-SNAPSHOT</version>
	<name>MATSim-Playgrounds</name>

	<scm>
		<url>https://github.com/matsim-org/matsim</url>
		<connection>scm:git:git://github.com/matsim-org/matsim.git</connection>
		<developerConnection>scm:git:git@github.com:matsim-org/matsim.git</developerConnection>
	</scm>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19</version>
				<configuration>
					<excludes>
						<exclude>**/*$*</exclude> <!-- exclude all inner classes -->
						<exclude>**/*PerformanceTest.java</exclude>
					</excludes>
					<forkMode>once</forkMode>
					<argLine>-Xmx400m -Djava.awt.headless=true</argLine>
					<enableAssertions>false</enableAssertions> <!-- this should be set to true, but we still have some tests that don't work otherwise... -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.19.1</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.0</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
					<revisionOnScmFailure>unknown</revisionOnScmFailure>
					<timestampFormat>{0,date,yyyy-MM-dd HH:mm:ss}</timestampFormat>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.8</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<modules>
		<module>agarwalamit</module>
		<module>andreas</module>
		<module>artemc</module>
		<module>balac</module>
		<module>balmermi</module>
		<module>benjamin</module>
		<module>bvitins</module>
		<module>cottbus</module>
		<module>dgrether</module>
		<module>dhisingh</module>
		<module>dhosse</module>
		<module>droeder</module>
		<module>duncan</module>
		<module>dziemke</module>
		<module>farzadalemi</module>
		<module>gregor</module>
		<module>gunnar</module>
		<module>hbecker</module>
		<module>ikaddoura</module>
		<module>imob</module>
		<module>ivtExt</module>
		<module>jbischoff</module>
		<module>jjoubert</module>
		<module>johannes</module>
		<module>juliakern</module>
		<module>kai</module>
		<module>kturner</module>
		<module>lcrociani</module>
		<module>lkroeger</module>
		<module>michalm</module>
		<module>mrieser</module>
		<module>muelleki</module>
		<module>mzilske</module>
		<module>naronald</module>
		<module>nmviljoen</module>
		<module>paschke</module>
		<module>pbouman</module>
		<module>pieter</module>
		<module>boescpa</module>
		<module>run</module>
		<module>sschroeder</module>
		<module>santiago</module>
		<module>sergioo</module>
		<module>singapore</module>
		<module>smeintjes</module>
		<module>smetzler</module>
		<module>southAfrica</module>
		<module>stockholm</module>
		<module>telaviv</module>
		<module>thibautd</module>
		<module>tthunig</module>
		<module>toronto</module>
		<module>wrashid</module>
		<module>ucsb</module>
		<module>vaadin-example</module>
		<module>vsptelematics</module>
		<module>vsp</module>
		<module>vspshk</module>
		<module>wbean</module>
		<module>vbmh</module>
	</modules>
	<repositories>
		<repository>
			<!-- Geotools is not on Maven central -->
			<id>osgeo</id>
			<name>Geotools repository</name>
			<url>http://download.osgeo.org/webdav/geotools</url>
		</repository>
		<repository>
			<id>matsim</id>
			<url>http://matsim.org/m2repo</url>
		</repository>
	</repositories>
	
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>0.8.0-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>0.8.0-SNAPSHOT</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>hudson</id>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>cobertura-maven-plugin</artifactId>
							<version>2.7</version>
							<configuration>
								<formats>
									<format>xml</format>
								</formats>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>findbugs-maven-plugin</artifactId>
							<version>3.0.0</version>
							<configuration>
								<effort>Max</effort>
								<threshold>Low</threshold>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
			<reporting>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-pmd-plugin</artifactId>
						<version>5.1.3</version>
						<configuration>
							<targetJdk>1.7</targetJdk>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>javancss-maven-plugin</artifactId>
						<version>2.0</version>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>findbugs-maven-plugin</artifactId>
						<version>3.0.0</version>
						<configuration>
							<effort>Max</effort>
							<threshold>Low</threshold>
						</configuration>
					</plugin>
				</plugins>
			</reporting>
		</profile>
		
		<profile>
			<id>release</id>
			<build>
				<defaultGoal>assembly:assembly</defaultGoal>
				<pluginManagement>
					<plugins>
						<plugin>
							<artifactId>maven-assembly-plugin</artifactId>
							<configuration>
								<descriptors>
									<descriptor>src/main/assembly/assembly-release.xml</descriptor>
								</descriptors>
							</configuration>
						</plugin>
						<plugin>
							<artifactId>maven-jar-plugin</artifactId>
							<configuration>
								<archive>
									<manifest>
										<addClasspath>true</addClasspath>
										<classpathPrefix>libs/</classpathPrefix>
									</manifest>
								</archive>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.graphstream</groupId>
				<artifactId>gs-ui</artifactId>
				<version>1.3</version>
			</dependency>
			<dependency>
				<groupId>org.graphstream</groupId>
				<artifactId>gs-core</artifactId>
				<version>1.3</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-math</artifactId>
				<version>2.2</version>
				<type>jar</type>
				<scope>compile</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

</project>
